--- a/Exercicios/Struct/.vscode/settings.json
+++ b/Exercicios/Struct/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "math.h": "c",
+        "cmath": "c"
     }
 }
