--- a/Exercicios/Struct/.vscode/settings.json
+++ b/Exercicios/Struct/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "math.h": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "string.h": "c"
     }
 }
